# SmaxEms

./: CMakeLists.txt  README.md  config.ini  config_all_options_att_download.ini  custom_action.ini  data.csv  example1-get.ini  example2-json_fields.ini  example3-create_requests.ini  example4-get_attachment_list.ini  example5-get_attachment_files.ini  json_action.ini  main.cpp
.github/workflows/: msbuild.yml  release.yaml
Parser/: Parser.cpp  Parser.h
RestClient/: RestClient.cpp  RestClient.h
SmaxClient/: ConnectionProperties.cpp  ConnectionProperties.h  ConsoleSpinner.cpp  ConsoleSpinner.h  DirectoryHandler.h  ResponseHelper.cpp  ResponseHelper.h  SMAXClient.cpp  SMAXClient.h
client/: ConnectionProperties.cpp  ConnectionProperties.h  RestClient.cpp  RestClient.h  SMAXClient.cpp  SMAXClient.h  rest_client.cpp
output/attachments/189421/: file_1
output/json_field/: 111274.json  134489.json  163621.json  188658.json  189421.json
utils/: utils.cpp  utils.h
